--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,34 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="https://openlayers.org/en/v4.6.5/css/ol.css" type="text/css">
+  <script src="https://openlayers.org/en/v4.6.5/build/ol.js"></script>
 </head>
 <body>
-  <ol-zoom-level></ol-zoom-level>
+    <div id="map" class="map" tabindex="0"></div>
+  <script>
+      var map = new ol.Map({
+        layers: [
+          new ol.layer.Tile({
+            source: new ol.source.OSM()
+          })
+        ],
+        target: 'map',
+        controls: ol.control.defaults({
+          attributionOptions: {
+            collapsible: false
+          }
+        }),
+        view: new ol.View({
+          center: [0, 0],
+          zoom: 2
+        })
+      });
+      setTimeout(() => {
+        const zoomLevel = document.createElement('ol-zoom-level');
+        zoomLevel.map = map;
+        document.body.appendChild(zoomLevel);
+      }, 200);
+    </script>
 </body>
 </html>
